@@ -1,5 +1,12 @@
 2003-09-26  John Levon  <levon@movementarian.org>
 
+	* libdb/tests/Makefile.am:
+	* libregex/tests/Makefile.am:
+	* libutil/tests/Makefile.am: don't build tests
+	unless "make check"
+
+2003-09-26  John Levon  <levon@movementarian.org>
+
 	* libutil/op_file.c: don't test for NULL path
 	passed in, we want to crash here instead of
 	in xstrdup
